objects/AgileVizArt__User_Story__c.object
<CustomObject>
    <description>Used to manage issues, bugs and user requirements or stories.</description>
    <fields>
        <fullName>AgileVizArt__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assigned user working on this story or task</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Created_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Required because CreatedBy is not a valid user to send email alerts.</description>
        <label>Created by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Current_User_Is_Raised_By__c</fullName>
        <formula>IF(AgileVizArt__Raised_By__c =  $User.Id, &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Is Raised By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Defective_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select user story that describes the feature or business functionality which is related to this defect.</inlineHelpText>
        <label>Defective User Story</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AgileVizArt__User_Story__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Requirement</value>
            </filterItems>
            <filterItems>
                <field>AgileVizArt__User_Story__c.AgileVizArt__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AgileVizArt__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AgileVizArt__User_Story__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Delegated_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter a delegate contact which delivers input for this user story.</inlineHelpText>
        <label>Delegated To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Delegated User Stories</relationshipLabel>
        <relationshipName>Delegated_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Deployed_Instances__c</fullName>
        <inlineHelpText>Select in which instances this story is already deployed</inlineHelpText>
        <label>Deployed Instances</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>PROD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Deployment_Instructions__c</fullName>
        <inlineHelpText>List Apex classes, Visualforce pages, custom objects, workflow rules to be deployed to activate this story</inlineHelpText>
        <label>Deployment Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Deployment_Status__c</fullName>
        <label>Deployment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Doing</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Description_No_HTML__c</fullName>
        <inlineHelpText>Used in board to display only text without HTML tags. This field is automatically populated by a workflow rule.</inlineHelpText>
        <label>Description (without HTML)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Doing_Date__c</fullName>
        <description>Date when story has been set to doing. This is used to generate burn-charts based on weighted status.</description>
        <label>Doing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Done_Date__c</fullName>
        <inlineHelpText>Date when story has been completed without deployment, but including development and testing</inlineHelpText>
        <label>Done Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Effort_Points__c</fullName>
        <label>Effort Points</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Epic_Story_Name__c</fullName>
        <description>Used mainly in background to pass into lookups</description>
        <formula>AgileVizArt__Epic_Story__r.Name</formula>
        <label>Epic Story Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Epic_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Epic Story</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AgileVizArt__Epic_Story__c.AgileVizArt__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AgileVizArt__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AgileVizArt__Epic_Story__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Global_Id__c</fullName>
        <displayFormat>GSI-{0}</displayFormat>
        <inlineHelpText>Provides an unique id for this user story across all projects. Use this number to find user stories uniquely.</inlineHelpText>
        <label>Global Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Is_Closed__c</fullName>
        <formula>CASE( AgileVizArt__Status__c,
&apos;Done&apos;, &apos;true&apos;,
&apos;Closed&apos;, &apos;true&apos;,
&apos;false&apos;)</formula>
        <inlineHelpText>Flag identifies all closed user stories = Closed, Done</inlineHelpText>
        <label>Is Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Is_Current_User__c</fullName>
        <formula>IF(AgileVizArt__Assigned_To__c =  $User.Id, &quot;true&quot;, &quot;false&quot;)</formula>
        <inlineHelpText>Evaluates if Assigned To is equal to current user.</inlineHelpText>
        <label>Is Current User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Is_Duplicate__c</fullName>
        <formula>IF( OR(ISBLANK(AgileVizArt__Master__c) ,    NOT(ISPICKVAL(AgileVizArt__Status__c, &quot;Duplicate&quot;))  ),  &quot;false&quot;, &quot;true&quot;)</formula>
        <inlineHelpText>Indicates if user story is not a duplicate</inlineHelpText>
        <label>Is Duplicate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Is_Open__c</fullName>
        <formula>CASE( AgileVizArt__Status__c,
&apos;On Hold&apos;, &apos;false&apos;,
&apos;Open&apos;, &apos;true&apos;,
&apos;Doing&apos;, &apos;true&apos;,
&apos;Review&apos;, &apos;true&apos;,
&apos;Done&apos;, &apos;false&apos;,
&apos;Closed&apos;, &apos;false&apos;,
&apos;Rejected&apos;, &apos;false&apos;,
&apos;Duplicate&apos;, &apos;false&apos;,
&apos;false&apos;)</formula>
        <inlineHelpText>Flag shows if user story is in one of the open status = Open, Doing, Review</inlineHelpText>
        <label>Is Open</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Languages__c</fullName>
        <inlineHelpText>Select languages to be translated for this story</inlineHelpText>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__LastChangedFields__c</fullName>
        <description>to record the name of fields from last update</description>
        <label>LastChangedFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Last_Comment_Update__c</fullName>
        <label>Last Comment Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>You can link user story to a master story to indicate it&apos;s a child user story</inlineHelpText>
        <label>Master</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AgileVizArt__Project__c</field>
                <operation>equals</operation>
                <valueField>AgileVizArt__User_Story__c.AgileVizArt__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AgileVizArt__User_Story__c</referenceTo>
        <relationshipLabel>Children</relationshipLabel>
        <relationshipName>Duplicates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Open_Date__c</fullName>
        <description>Date when story has been set to open. This is used to generate burn-charts based on weighted status.</description>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Ordered_Status__c</fullName>
        <description>Used to display status order for related lists and list views only.</description>
        <formula>CASE(AgileVizArt__Status__c,
&quot;On Hold&quot;, &quot;0. On Hold&quot;,
&quot;Open&quot;, &quot;1. Open&quot;,
&quot;Doing&quot;, &quot;2. Doing&quot;,
&quot;Review&quot;, &quot;3. Review&quot;,
&quot;Done&quot;, &quot;4. Done&quot;,
&quot;Closed&quot;, &quot;5. Closed&quot;,
&quot;Duplicate&quot;, &quot;6. Duplicate&quot;,
&quot;Rejected&quot;, &quot;7. Rejected&quot;,
&quot;1. Open&quot;)</formula>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Override_Priority__c</fullName>
        <inlineHelpText>Override importance of your epic story for this user story using MoSCoW method</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Must</fullName>
                </value>
                <value>
                    <fullName>Should</fullName>
                </value>
                <value>
                    <fullName>Could</fullName>
                </value>
                <value>
                    <fullName>Would</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Points__c</fullName>
        <formula>VALUE(TEXT(AgileVizArt__Effort_Points__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Priority_Severity_Urgency__c</fullName>
        <description>Used in list views to combine priority for requirements, severity for defects and urgency for issues in one field.</description>
        <formula>CASE($RecordType.DeveloperName,
&quot;Issue&quot;,  TEXT(AgileVizArt__Urgency__c),
&quot;Defect&quot;, TEXT(AgileVizArt__Severity__c),
&quot;Requirement&quot;,  CASE(AgileVizArt__Override_Priority__c,
&quot;Must&quot;, &quot;1. Must&quot;,
&quot;Should&quot;, &quot;2. Should&quot;,
&quot;Could&quot;, &quot;3. Could&quot;,
&quot;Would&quot;, &quot;4. Would&quot;,
&quot;4. Would&quot;)
,&quot;n/a&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority/Severity/Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Priority__c</fullName>
        <formula>TEXT(AgileVizArt__Epic_Story__r.AgileVizArt__Priority__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows priority of related epic story.</inlineHelpText>
        <label>Epic Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Process_Stage__c</fullName>
        <formula>CASE(AgileVizArt__Status__c,
&quot;On Hold&quot;, &quot;0. On Hold&quot;,
&quot;Open&quot;, &quot;1. Open&quot;,
&quot;Doing&quot;, &quot;2. Doing&quot;,
&quot;Review&quot;, &quot;3. Review&quot;,
&quot;Done&quot;, &quot;4. Done&quot;,
&quot;Closed&quot;, &quot;4. Done&quot;,
&quot;Duplicate&quot;, &quot;5. Duplicate&quot;,
&quot;Rejected&quot;, &quot;6. Rejected&quot;,
&quot;1. Open&quot;)</formula>
        <inlineHelpText>Groups done and closed into one status. Used for process analysis.</inlineHelpText>
        <label>Process Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Project_Name__c</fullName>
        <description>Used mainly in background to pass into master detail relationship lookups</description>
        <formula>AgileVizArt__Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Project__c</fullName>
        <label>Project</label>
        <referenceTo>AgileVizArt__Project__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Raised_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please enter user that has registered</inlineHelpText>
        <label>Raised By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Raised_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Rank_ReadOnly__c</fullName>
        <description>Used only to prevent administrators to edit it.</description>
        <formula>AgileVizArt__Rank__c</formula>
        <inlineHelpText>Defines rank of user stories within product backlog</inlineHelpText>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Rank__c</fullName>
        <description>Only used in background. Do not provide to end-users</description>
        <inlineHelpText>Use this to rank user stories within backlog</inlineHelpText>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Related_Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link related risk if defect or issue are escalated or related to a risk</inlineHelpText>
        <label>Related Risk</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AgileVizArt__Risk__c.AgileVizArt__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AgileVizArt__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AgileVizArt__Risk__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Reporting_Urgency__c</fullName>
        <formula>IF(ISPICKVAL(AgileVizArt__Urgency__c, &quot;1. Show Stopper&quot;), &quot;0. Show Stopper&quot;,
   IF(AgileVizArt__Top__c, &quot;1. Top Issue&quot;, TEXT(AgileVizArt__Urgency__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Review_Date__c</fullName>
        <description>Date when story has been set to review. This is used to generate burn-charts based on weighted status.</description>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Severity__c</fullName>
        <description>Critical production issue affecting all users, including system unavailability and data integrity issues with no workaround available.

Major functionality is impacted or significant performance degradation is experienced.  Issue is persistent and affects many users and/or major functionality.  No reasonable workaround available.  Also includes time-sensitive requests such as requests for feature activation or a data export. 

System performance issue or bug affecting some but not all users.  Short-term workaround is available, but not scalable.  

Inquiry regarding a routine technical issue; information requested on application capabilities, navigation, installation or configuration; bug affecting a small number of users.  Reasonable workaround available.  Resolution required as soon as reasonably practicable.</description>
        <inlineHelpText>Level 1: Critical production issue affecting all users with no workaround
Level 2: Major functionality impacted, no reasonable workaround
Level 3: Bug effecting some users, short-term workaround
Level 4: Routine inquiry, reasonable workaround</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1 – Critical</fullName>
                </value>
                <value>
                    <fullName>Level 2 – Urgent</fullName>
                </value>
                <value>
                    <fullName>Level 3 – High</fullName>
                </value>
                <value>
                    <fullName>Level 4 – Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Show_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if user story should be still displayed in scrumboard and iteration planning when it has children assigned to it. Applies in conjunction with master lookup. You need to set this flag only on master story.</inlineHelpText>
        <label>Show Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Sprint_Assignment_Date__c</fullName>
        <label>Sprint Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Sprint_Name__c</fullName>
        <description>Used mainly in background to pass into lookups</description>
        <formula>AgileVizArt__Sprint__r.Name</formula>
        <label>Sprint Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Sprint_Rank__c</fullName>
        <description>Only used in background. Do not provide to end-users</description>
        <inlineHelpText>Used to rank user stories within Sprint</inlineHelpText>
        <label>Sprint Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AgileVizArt__Sprint__c.AgileVizArt__Release__r.AgileVizArt__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AgileVizArt__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AgileVizArt__Sprint__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Doing</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Story_Id__c</fullName>
        <formula>IF(NOT(ISBLANK(AgileVizArt__Story_Number__c)), LEFT($RecordType.DeveloperName, 1) &amp; &quot;-&quot; &amp;  TEXT(AgileVizArt__Story_Number__c), &quot;&quot;)</formula>
        <inlineHelpText>Unique user story identifier by project: D=Defect, I=Issue, R=Requirement</inlineHelpText>
        <label>Story #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Story_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, AgileVizArt__Story_Id__c &amp; &quot; &quot; &amp;  Name, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Story Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Story_Number_Text__c</fullName>
        <description>Populated by workflow to enable global search by story number</description>
        <label>Story Number Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Story_Number__c</fullName>
        <description>Only used in background. Do not provide to end-users</description>
        <inlineHelpText>Defines a unique story number by project</inlineHelpText>
        <label>Story Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Sync_Priority__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Shows if priority of related epic story is synched on user story level. Check to sync with epic story, uncheck to override</inlineHelpText>
        <label>Sync Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Top__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies an issue or defect as relevant for status calls or other reviews as being an top user story to watch.</inlineHelpText>
        <label>Top</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Translated_Instances__c</fullName>
        <inlineHelpText>Select in which instances this story is already deployed</inlineHelpText>
        <label>Translated Instances</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>PROD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Translation_Instructions__c</fullName>
        <inlineHelpText>List fields, picklist values and other topics to translate</inlineHelpText>
        <label>Translation Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Translation_Status__c</fullName>
        <label>Translation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Doing</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Urgency__c</fullName>
        <description>Recommendation for issues to manage or prioritize them.</description>
        <inlineHelpText>Prioritize issues by urgency you expect resolving, rather importance. Use following suggestions:
Show Stopper:  ~1 day
High: ~2-3 days
Medium: ~1 week
Normal: ~2 weeks
Low: ~4 weeks
Long-term: ~3 months
Idea: Reminder bucket with no urgency</inlineHelpText>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Show Stopper</fullName>
                </value>
                <value>
                    <fullName>2. High</fullName>
                </value>
                <value>
                    <fullName>3. Medium</fullName>
                </value>
                <value>
                    <fullName>4. Normal</fullName>
                    <default>true</default>
                    <label>4. Normal</label>
                </value>
                <value>
                    <fullName>5. Low</fullName>
                </value>
                <value>
                    <fullName>6. Long-term</fullName>
                </value>
                <value>
                    <fullName>7. Idea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a related user story which can be requirement or defect</inlineHelpText>
        <label>User Story</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AgileVizArt__User_Story__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Requirement, Defect</value>
            </filterItems>
            <filterItems>
                <field>$Source.AgileVizArt__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AgileVizArt__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AgileVizArt__User_Story__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Used for optimistic concurrency handling</description>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Defect__c</fullName>
        <description>This formula field allows users to create new defects directly from a User Story List View.</description>
        <formula>HYPERLINK(&quot;/a0k/e?RecordType=&quot; &amp; $Label.User_Story_Defect_Record_Type &amp;  $Label.Connecting_To_Sales_Project_Id_Name  ,  &quot;Create New Defect&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Defect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Related_Training_Material__c</fullName>
        <formula>IF(NOT(ISBLANK(Related_Content_Id__c)), HYPERLINK(&quot;/&quot; &amp; Related_Content_Id__c, &quot;Open Related Training Material&quot;, &quot;_blank&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Related Training Material</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Content_Id__c</fullName>
        <label>Related Content Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This field defines the start date.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>AgileVizArt__All</fullName>
        <columns>AgileVizArt__Story_Id__c</columns>
        <columns>NAME</columns>
        <columns>AgileVizArt__Description__c</columns>
        <columns>AgileVizArt__Status__c</columns>
        <columns>AgileVizArt__Epic_Story__c</columns>
        <columns>AgileVizArt__Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>AgileVizArt__Last_Comment_Update__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>AgileVizArt__Created_by__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AgileVizArt__Story_Id__c</field>
            <operation>startsWith</operation>
            <value>D</value>
        </filters>
        <filters>
            <field>AgileVizArt__Status__c</field>
            <operation>equals</operation>
            <value>Open,Doing,Review</value>
        </filters>
        <filters>
            <field>AgileVizArt__Epic_Story__c</field>
            <operation>notEqual</operation>
            <value>Phase II</value>
        </filters>
        <filters>
            <field>AgileVizArt__Project__c</field>
            <operation>equals</operation>
            <value>Connecting to sales</value>
        </filters>
        <label>open defects Phase 1</label>
    </listViews>
    <listViews>
        <fullName>AgileVizArt__My_Open_Issues</fullName>
        <columns>AgileVizArt__Project_Name__c</columns>
        <columns>AgileVizArt__Story_Id__c</columns>
        <columns>NAME</columns>
        <columns>AgileVizArt__Top__c</columns>
        <columns>AgileVizArt__Urgency__c</columns>
        <columns>AgileVizArt__Epic_Story__c</columns>
        <columns>AgileVizArt__Status__c</columns>
        <columns>AgileVizArt__Override_Priority__c</columns>
        <columns>AgileVizArt__Description__c</columns>
        <columns>AgileVizArt__Due_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>AgileVizArt__Project__c</columns>
        <columns>AgileVizArt__Effort_Points__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AgileVizArt__Status__c</field>
            <operation>notEqual</operation>
            <value>On Hold,Rejected,Duplicate,Done,Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>AgileVizArt__User_Story__c.AgileVizArt__Issue,AgileVizArt__User_Story__c.AgileVizArt__Requirement,AgileVizArt__User_Story__c.AgileVizArt__Defect</value>
        </filters>
        <filters>
            <field>AgileVizArt__Is_Current_User__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <filters>
            <field>AgileVizArt__Urgency__c</field>
            <operation>notEqual</operation>
            <value>1. Show Stopper</value>
        </filters>
        <label>My Open Issues</label>
        <language>en_US</language>
    </listViews>
</CustomObject>